src/objects/BGBK__CartSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Cart Settings</description>
    <fields>
        <fullName>BGBK__Allow_Existing_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE to enable the &quot;Existing receipt&quot; option for the payment method.</description>
        <label>Allow Paying with Existing Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Allow_Multiple_Payment_Methods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE to display the &quot;Add Payment Method&quot; button on the cart&apos;s checkout page.</description>
        <label>Allow Multiple Payment Methods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Allow_Partial_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE to disable validation on the payment amount and allow users to pay less than the outstanding amount on the cart.</description>
        <label>Allow Partial Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Allow_Pay_By_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE to enable the deposit option for the payment method.</description>
        <label>Allow Pay By Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__BG_Verification_PIN_API_Name__c</fullName>
        <description>Field API Name on the cart object. The value of this field is used for validation when a fee needs to be transferred from one cart to another.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API Name of the Cart field containing the PIN to be shared for pushing fees to this Cart. Fees are transferred.</inlineHelpText>
        <label>Verification PIN API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart_Expiration_Hours__c</fullName>
        <description>Deprecated - set to null.</description>
        <label>Manual Cart Expiration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart_Page__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cart Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Enable_Cashier_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE if the Cashiering module is used.</description>
        <label>Enable Cashier Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Enable_High_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE if the system needs to process more than 50 items in the cart in a single transaction.</description>
        <label>Enable High Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Payable_Parents__c</fullName>
        <description>Deprecated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List of object API names whose Fees can be paid (e.g. Lien__c, Obj1__c). Super parents and Invoices need not be included.</inlineHelpText>
        <label>Payable Parents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Batch_Scope__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Payment Batch Scope</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Credentials__c</fullName>
        <description>Used for a 3rd party payment gateway integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Gateway Credentials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Data_Encryption_Key__c</fullName>
        <description>Used for a 3rd party payment gateway integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Needs to be 16 characters long. Otherwise will throw error. Example can be &apos;BasicGovPayments&apos;</inlineHelpText>
        <label>Payment Gateway Data Encryption Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Form_Post_URL__c</fullName>
        <description>Used for a 3rd party payment gateway integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Gateway Form Post URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Requires_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for a 3rd party payment gateway integration.</description>
        <label>Payment Gateway Requires Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Requires_Credentials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for a 3rd party payment gateway integration.</description>
        <label>Payment Gateway Requires Credentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Requires_Initialization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for a 3rd party payment gateway integration.</description>
        <label>Payment Gateway Requires Initialization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Response_Handler_Class__c</fullName>
        <defaultValue>&apos;BGBK.MockPaymentGatewayResponseHandler&apos;</defaultValue>
        <description>Class name which implements the IPaymentGatewayResponseHandler interface</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Class name which implements the IPaymentGatewayResponseHandler interface</inlineHelpText>
        <label>Payment Gateway Response Handler Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Gateway_Response_Protocol__c</fullName>
        <description>Used for a 3rd party payment gateway integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Gateway Response Protocol</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Receipt_Sender_Name__c</fullName>
        <description>Display name of the OrgWide email address (return address) that needs to be used for sending emails to the receipt.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Display Name of the OrgWide Email Address that needs to be used for sending the receipt</inlineHelpText>
        <label>Receipt Sender Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxIdsfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cart Settings</label>
</CustomObject>